# py_cli

./: .gitignore  README.md  app.py  cli.py  pyproject.toml
src/crawler/: crawl.py  reddit_crawl.py
src/entity/: scrapped_link.py
src/hello/: greeter.py
tests/: test_cli.py  test_greeter.py  test_reddit_crawl.py
